--- a/MPlayer/MainWindow.xaml
+++ b/MPlayer/MainWindow.xaml
@@ -7,7 +7,8 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button x:Name="Pause" Content="Button" HorizontalAlignment="Center" Margin="0,97,0,0" VerticalAlignment="Top" Height="73" Width="144" Click="Pause_Click"/>
+        <Button x:Name="Pause" Content="Button" HorizontalAlignment="Center" Margin="0,100,0,0" VerticalAlignment="Top" Height="73" Width="144" Click="Pause_Click"/>
+        <Button Content="Button" HorizontalAlignment="Left" Height="39" Margin="93,231,0,0" VerticalAlignment="Top" Width="126" Click="Button_Click"/>
 
     </Grid>
 </Window>
