--- a/MPlayer/MainWindow.xaml
+++ b/MPlayer/MainWindow.xaml
@@ -9,6 +9,7 @@
     <Grid>
         <Button x:Name="Pause" Content="Button" HorizontalAlignment="Center" Margin="0,100,0,0" VerticalAlignment="Top" Height="73" Width="144" Click="Pause_Click"/>
         <Button Content="Button" HorizontalAlignment="Left" Height="39" Margin="93,231,0,0" VerticalAlignment="Top" Width="126" Click="Button_Click"/>
+        <Button x:Name="Music" Content="Music" HorizontalAlignment="Left" Margin="534,270,0,0" VerticalAlignment="Top" Height="52" Width="147" Click="Music_Click"/>
 
     </Grid>
 </Window>
